--- a/templates/cart/checkout.html.twig
+++ b/templates/cart/checkout.html.twig
@@ -32,6 +32,12 @@
 
     {{ form_start(form) }}
     <h2>Delivery info</h2>
+        <div class="form_group">
+            <div class="col-md-6 mb-3">
+                {{ form_row(form.city, {'attr': {'class':
+                    'form-control'}}) }}
+            </div>
+        </div>
     <div class="form_group">
         <div class="col-md-6 mb-3">
             {{ form_row(form.Address, {'attr': {'class':
