--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,6 +4,11 @@
 {% block title %}Cart{% endblock %}
 
 {% block body %}
+    <style>
+    .alert{
+        background: #921e12;
+    }
+    </style>
     <div class="container mt-4">
         <h1>Your Cart</h1>
         {% if cart.items.count > 0 %}
@@ -29,20 +34,24 @@
                                         <small>{{ item.vars.data.product.description[:50] }}...</small>
                                         <div class="form-inline mt-2">
                                             <div class="form-group mb-0 mr-2">
-                                                {{ form_widget(item.quantity, {
-                                                    'attr': {
-                                                        'class': 'form-control form-control-sm ' ~ (item.quantity.vars.valid ? '' : 'is-invalid' )
-                                                    }
-                                                }) }}
-                                                <div class="invalid-feedback">
-                                                    {{ form_errors(item.quantity) }}
-                                                </div>
+                                                <a  href="{{ path('decrease_cart_product_process', {'id':item.vars.data.id}) }}">
+                                                    <i class="fa fa-minus-square" aria-hidden="true"></i>
+                                                </a>
+
+                                                {{ item.vars.data.quantity }}
+
+                                                <a  href="{{ path('increase_cart_product_process', {'id':item.vars.data.id}) }}">
+                                                    <i class="fa fa-plus-square" aria-hidden="true"></i>
+                                                </a>
+                                                {% if item.vars.data.quantity > item.vars.data.product.quantity %}
+                                                    <meta http-equiv="refresh" content="time;{{ path('set_max_cart_product_process',{'id':item.vars.data.id})}}">
+                                                {% endif %}
                                             </div>
                                             {{ form_widget(item.remove, {'attr': {'class': 'btn btn-dark btn-sm'}}) }}
                                         </div>
                                     </div>
                                     <div class="flex-fill mr-2 text-right">
-                                        <b>{{ item.vars.data.product.price }} €</b>
+                                        <b>{{ item.vars.data.product.price }} ₽</b>
                                     </div>
                                 </li>
                             {% endfor %}
@@ -57,7 +66,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between">
                                 <div><b>Total</b></div>
-                                <span><b>{{ cart.total }} €</b></span>
+                                <span><b>{{ cart.total }} ₽</b></span>
                             </li>
                         </ul>
                         <div class="card-body">
