--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -2,6 +2,107 @@
 
 {% block body_id 'blog_index' %}
 
+
+{% block header %}
+    <header>
+        <div class="navbar navbar-default navbar-static-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header col-md-3 col-lg-2">
+                    <a class="navbar-brand" href="{{ path('product_index') }}">
+                        Maybe Website
+                    </a>
+
+                    <button type="button" class="navbar-toggle"
+                            data-toggle="collapse"
+                            data-target=".navbar-collapse">
+                        <span class="sr-only">Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+
+                        {% block header_navigation_links %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li>
+                                    <a href="{{ path('admin_product_index') }}">
+                                        <i class="fa fa-lock" aria-hidden="true"></i> Admin
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endblock %}
+
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-expanded="false" id="categories">
+                                <i class="fa fa-bars" aria-hidden="true"></i>Categories
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu user" role="menu" aria-labelledby="categories">
+                            {% for category in categories %}
+                        <li>
+                            <a href="{{ path('category_search', {id: category.id}) }}">
+                                <i class="fa fa-cart"></i>{{ category.name }}
+                            </a>
+                        </li>
+                        {% endfor %}
+                            </ul>>
+                        </li>
+
+                        <li>
+                            <a href="{{ path('product_search') }}"> <i class="fa fa-search"></i> Search</a>
+                        </li>
+
+                        <li>
+                            <a href="{{ path('cart') }}"> <i class="fa fa-shopping-cart"></i> Cart</a>
+                        </li>
+
+                        {% if app.user %}
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                   aria-expanded="false" id="user">
+                                    <i class="fa fa-user" aria-hidden="true"></i>{{ app.user.username }}
+                                    <span class="caret"></span>
+                                    <span class="sr-only">{{ app.user.email }}</span>
+                                </a>
+                                <ul class="dropdown-menu user" role="menu" aria-labelledby="user">
+                                    <li>
+                                        <a href="{{ path('user_edit') }}">
+                                            <i class="fa fa-edit" aria-hidden="true"></i> User
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href={{ path('orderlist') }}>
+                                            <i class="fa fa-archive" aria-hidden="true"></i> Orders
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="{{ path('app_logout') }}">
+                                            <i class="fa fa-sign-out" aria-hidden="true"></i> Logout
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ path('app_login') }}">
+                                    <i class="fa fa-sign-in " aria-hidden="true"></i> Login
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+{% endblock %}
+
 {% block main %}
     {% for product in products %}
         <article class="well">
@@ -11,9 +112,9 @@
                     {{ product.name }}
                 </a>
                 <br>
-                    <i class="fa fa-money" aria-hidden="true">
+                <i class="fa fa-money" aria-hidden="true">
                     {{ product.price }}₽
-                    </i>
+                </i>
             </h2>
 
             <p>{{ product.summary }}</p>
@@ -24,87 +125,6 @@
     {% endfor %}
 
     <div class="navigation text-center">
-        {{ knp_pagination_render(products)}}
+        {{ knp_pagination_render(products) }}
     </div>
-{% endblock %}
-
-{% block sidebar %}
-
-    <div class="container-fluid px-0">
-        <nav class="navbar navbar-expand-md navbar-light bg-white p-0"> <a class="navbar-brand mr-4" href="#"><strong>BBBootstrap</strong></a> <button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"> <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products<span class="fa fa-angle-down"></span></a>
-                        <div class="dropdown-menu" id="dropdown-menu1" aria-labelledby="navbarDropdown1">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-shopping-cart"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">WearCMS</h6> <small class="text-muted">For your project</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-gamepad"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">Game+</h6> <small class="text-muted">Monetization of games</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-video-camera"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">Streetcam</h6> <small class="text-muted">Keep track all year</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-comment"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">Teamne</h6> <small class="text-muted">Teamwork</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-briefcase"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">Prospec</h6> <small class="text-muted">Solutions for your business</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="row d-flex tab">
-                                            <div class="fa-icon text-center"> <span class="fa fa-bolt"></span> </div>
-                                            <div class="d-flex flex-column"> <a class="dropdown-item" href="#">
-                                                    <h6 class="mb-0">Booster</h6> <small class="text-muted">Increase engagement</small>
-                                                </a> </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
-    <h1>Categories</h1>
-    {% for category in categories %}
-        <li>
-            <a href="{{ path('category_search', {id: category.id}) }}" class="btn btn-primary" style="width: 200px">
-                <i class="fa fa-cart"></i>{{ category.name }}
-            </a>
-        </li>
-    {% endfor %}
 {% endblock %}
